- to test: DeathKnightFrostAcclimation, DeathKnightFrostTundraStalker, DeathKnightFrostHungeringCold, DeathKnightUnholyReaping